# muvat-dev

./: .gitmodules  Makefile.am  README.md  _bashrc  configure.ac  install.sh  m.sh  muvat.c  pre-jenkins.sh  uninstall.sh
_allrc/: _bashrc  _screenrc  _tmux.conf  _vimrc
cbrs/: .clang  .vimrc
jma/: _bashrc  dbus  install-centos.sh
snippets/: fbInviteAll.js  split-struct.sh
